### CMakeLists.txt ---
## 
## Author: Julien Wintz
## Created: Tue Mar 12 13:00:19 2013 (+0100)
## Version: 
## Last-Updated: Tue Mar 12 13:00:38 2013 (+0100)
##           By: Julien Wintz
##     Update #: 3
######################################################################
## 
### Change Log:
## 
######################################################################

add_subdirectory(QtWidgets)
