### CMakeLists.txt --- 
## 
## Author: Julien Wintz
## Created: Thu Feb 21 11:43:32 2013 (+0100)
## Version: 
## Last-Updated: Thu Feb 21 11:43:39 2013 (+0100)
##           By: Julien Wintz
##     Update #: 2
######################################################################
## 
### Change Log:
## 
######################################################################

add_subdirectory(QLeapGui)
