### CMakeLists.txt --- 
## 
## Author: Julien Wintz
## Created: Thu Feb 21 12:31:37 2013 (+0100)
## Version: 
## Last-Updated: Thu Feb 21 13:32:36 2013 (+0100)
##           By: Julien Wintz
##     Update #: 5
######################################################################
## 
### Change Log:
## 
######################################################################

add_subdirectory(QLeapGui)
