### CMakeLists.txt ---
## 
## Author: Julien Wintz
## Created: Tue Mar 12 16:36:03 2013 (+0100)
## Version: 
## Last-Updated: Tue Mar 12 16:36:13 2013 (+0100)
##           By: Julien Wintz
##     Update #: 1
######################################################################
## 
### Change Log:
## 
######################################################################

add_subdirectory(QtQuickMouseArea)
