### CMakeLists.txt ---
## 
## Author: Julien Wintz
## Created: Tue Mar 12 13:03:12 2013 (+0100)
## Version: 
## Last-Updated: Tue Mar 12 13:03:23 2013 (+0100)
##           By: Julien Wintz
##     Update #: 1
######################################################################
## 
### Change Log:
## 
######################################################################

add_subdirectory(QtWidgetsMouseEvents)
