### CMakeLists.txt ---
## 
## Author: Julien Wintz
## Created: Tue Mar 12 13:03:12 2013 (+0100)
## Version: 
## Last-Updated: Tue Mar 12 16:13:26 2013 (+0100)
##           By: Julien Wintz
##     Update #: 2
######################################################################
## 
### Change Log:
## 
######################################################################

add_subdirectory(QtWidgetsMouseEvents)
add_subdirectory(QtWidgetsTouchEvents)
